--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "project_2",
+  "name": "gamerish",
   "version": "1.0.0",
-  "description": "",
+  "description": "A modern gaming review blog platform",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon"
+    "dev": "nodemon server.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
-  "keywords": [],
+  "keywords": ["gaming", "reviews", "blog", "fullstack"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.3",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "jsx-view-engine": "^0.1.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.7.0",
+    "mongoose": "^8.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.3",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
